# naan

./: .gitignore  LICENSE  README.md  pyproject.toml  sentences.json
.github/workflows/: test.yml
example/: main.py
naan/: __about__.py  __init__.py  document.py  filesystem.py  filters.py  naan.py  queries.py
tests/: test_filesystem.py  test_filters.py  test_naan.py
