[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "naan"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Massimiliano Pippi", email = "mpippi@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "faiss-cpu",
  "duckdb",
  "pyparsing",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/naan#readme"
Issues = "https://github.com/unknown/naan/issues"
Source = "https://github.com/unknown/naan"

[tool.hatch.version]
path = "naan/__about__.py"

[tool.hatch.build]
exclude = [
  "/example",
  "/tests",
]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report -m",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/naan tests}"

[tool.coverage.run]
source_pkgs = ["naan", "tests"]
branch = true
parallel = true
omit = [
  "src/naan/__about__.py",
]

[tool.coverage.paths]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
lint.ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
exclude = ["example", "tests"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
